<?xml version="1.0"?>
<package format="3">
  <name>chronos_inspector</name>
  <version>1.0.0</version>
  <description>Autonomous UAV Infrastructure Inspection System using ROS 2, SLAM, and AI.</description>
  <maintainer email="yogesh@example.com">yogesh</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
